--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/blog/favicon.ico"><title>vue3-version</title><link href="/blog/css/chunk-46d9dc57.51bda756.css" rel="prefetch"><link href="/blog/css/chunk-4892226e.33d71ccf.css" rel="prefetch"><link href="/blog/css/chunk-5a25ff96.9ee07063.css" rel="prefetch"><link href="/blog/css/chunk-612be39f.7b3bfdf2.css" rel="prefetch"><link href="/blog/css/chunk-64072301.830bc4c0.css" rel="prefetch"><link href="/blog/css/chunk-68c7de86.2c22965d.css" rel="prefetch"><link href="/blog/js/chunk-46d9dc57.6b7fbb1c.js" rel="prefetch"><link href="/blog/js/chunk-4892226e.56ed417b.js" rel="prefetch"><link href="/blog/js/chunk-5a25ff96.2f6e98cc.js" rel="prefetch"><link href="/blog/js/chunk-612be39f.91b00615.js" rel="prefetch"><link href="/blog/js/chunk-64072301.167a8837.js" rel="prefetch"><link href="/blog/js/chunk-68c7de86.02569009.js" rel="prefetch"><link href="/blog/css/app.2eb4ea0e.css" rel="preload" as="style"><link href="/blog/css/chunk-vendors.70a523c2.css" rel="preload" as="style"><link href="/blog/js/app.67a11bba.js" rel="preload" as="script"><link href="/blog/js/chunk-vendors.ad568171.js" rel="preload" as="script"><link href="/blog/css/chunk-vendors.70a523c2.css" rel="stylesheet"><link href="/blog/css/app.2eb4ea0e.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue3-version doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/blog/js/chunk-vendors.ad568171.js"></script><script src="/blog/js/app.67a11bba.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>vue3-version</title>
+    <link href="/css/chunk-46d9dc57.51bda756.css" rel="prefetch">
+    <link href="/css/chunk-4892226e.33d71ccf.css" rel="prefetch">
+    <link href="/css/chunk-5a25ff96.9ee07063.css" rel="prefetch">
+    <link href="/css/chunk-612be39f.7b3bfdf2.css" rel="prefetch">
+    <link href="/css/chunk-64072301.830bc4c0.css" rel="prefetch">
+    <link href="/css/chunk-68c7de86.2c22965d.css" rel="prefetch">
+    <link href="/js/chunk-46d9dc57.6b7fbb1c.js" rel="prefetch">
+    <link href="/js/chunk-4892226e.56ed417b.js" rel="prefetch">
+    <link href="/js/chunk-5a25ff96.2f6e98cc.js" rel="prefetch">
+    <link href="/js/chunk-612be39f.91b00615.js" rel="prefetch">
+    <link href="/js/chunk-64072301.167a8837.js" rel="prefetch">
+    <link href="/js/chunk-68c7de86.02569009.js" rel="prefetch">
+    <link href="/css/app.2eb4ea0e.css" rel="preload" as="style">
+    <link href="/css/chunk-vendors.70a523c2.css" rel="preload" as="style">
+    <link href="/js/app.67a11bba.js" rel="preload" as="script">
+    <link href="/js/chunk-vendors.ad568171.js" rel="preload" as="script">
+    <link href="/css/chunk-vendors.70a523c2.css" rel="stylesheet">
+    <link href="/css/app.2eb4ea0e.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but vue3-version doesn't work properly without JavaScript enabled. Please enable it
+            to continue.</strong></noscript>
+    <div id="app"></div>
+    <script src="/js/chunk-vendors.ad568171.js"></script>
+    <script src="/js/app.67a11bba.js"></script>
+</body>
+
+</html>
